Missing call to [self init] in -[WebScrollbarPartAnimation initWithScrollbar:featureToAnimate:animateFrom:animateTo:duration:] <https://webkit.org/b/201806>

Reviewed by Simon Fraser.

* platform/mac/ScrollAnimatorMac.mm:
(-[WebScrollbarPartAnimation initWithScrollbar:featureToAnimate:animateFrom:animateTo:duration:]):
Call [self init] and return early if the result is nil.


Canonical link: https://commits.webkit.org/215441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249887 268f45cc-cd09-0410-ab3c-d52691b4dbfc